--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: Build Site
 on:
   push:
     branches:
@@ -18,11 +18,12 @@ jobs:
         with:
           python-version: 3.x
 
-      - name: Install dependencies
-        run: pip install pymupdf pymupdf4llm mkdocs mkdocs-material
+      - name: Install tools
+        # Устанавливаем и библиотеку для PDF, и движок сайта
+        run: pip install pymupdf mkdocs mkdocs-material
 
-      - name: Convert PDF to Site
+      - name: Run Converter
         run: python convert.py
 
-      - name: Deploy to GitHub Pages
+      - name: Publish Site
         run: mkdocs gh-deploy --force
